# basic-conan-template

./: CMakeLists.txt
cmake/: Conan.cmake
src/: main.cpp
